infrastructure/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  selector:
    app: dex
  ports:
    - protocol: TCP
      port: 5556
      targetPort: 5556
